--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,30 +1,18 @@
-name: ci
+name: Docker Image
 
 on:
-  push:
-    branches:
-      - 'master'
+push:
+branches: [ main ]
+pull_request:
+branches: [ main ]
 
 jobs:
-  docker:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: user/app:latest
+
+build:
+
+runs-on: ubuntu-latest
+
+steps:
+- uses: actions/checkout@v2
+- name: Build the Docker image
+run: docker push cr.yandex/crpo30oaoogvq1b1e6l6/ubuntu:dz1
