--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,18 +1,26 @@
-name: Docker Image a
+name: ci
 
 on:
 push:
-branches: [ main ]
-pull_request:
-branches: [ main ]
+branches:
+- 'master'
 
 jobs:
-
-build:
-
-runs-on: dz1-latest
-
+docker:
+runs-on: ubuntu-latest
 steps:
-- uses: actions/checkout@v1
-- name: Build the Docker image
-run: docker push cr.yandex/crpo30oaoogvq1b1e6l6/dz1:latest
+-
+name: Checkout
+uses: actions/checkout@v2
+-
+name: Log in to YC
+uses: docker/login-action@v1
+with:
+registry: cr.yandex
+username: oauth
+password:
+-
+name: Build, tag, and push image to Yandex Cloud Container Registry
+run: |
+docker build -t cr.yandex/crpo30oaoogvq1b1e6l6/dz1:latest .
+docker push cr.yandex/crpo30oaoogvq1b1e6l6/dz1:latest
