--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ uses: docker/login-action@v1
 with:
 registry: cr.yandex
 username: oauth
-password:
+password: AQAAAAAa8LfkAATuwdeusC0E503usWOsfu23q90
 -
 name: Build, tag, and push image to Yandex Cloud Container Registry
 run: |
